<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/txtMaNV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/manv"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtTenNV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tennv"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtNgaySinh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ngaysinh"
        android:inputType="date" />

    <EditText
        android:id="@+id/txtMaPB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mapb"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtLuong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/luong"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnThem"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_add_box_black_24dp"
            android:text="@string/them" />

        <Button
            android:id="@+id/btnXoa"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_delete_black_24dp"
            android:text="@string/xoa" />

        <Button
            android:id="@+id/btnSua"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_update_black_24dp"
            android:text="@string/sua" />

        <Button
            android:id="@+id/btnClear"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_clear_all_black_24dp"
            android:text="@string/clear" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvNhanVien"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/colorPrimary"
        android:dividerHeight="5dp"
        ></ListView>

</LinearLayout>